chore: Update build dates, copyright years, and scan IDs across localizations and templates.

--- a/webApp/src/jsMain/resources/threat.html
+++ b/webApp/src/jsMain/resources/threat.html
@@ -234,7 +234,7 @@
                         <div class="main-column">
                             <div class="section-header">
                                 <h3 data-i18n="SectionAttackBreakdown">Attack Breakdown</h3>
-                                <span class="scan-id" id="scanIdLabel">ID: scan_2023_10_24_af92</span>
+                                <span class="scan-id" id="scanIdLabel">ID: scan_2025_12_29_h9t2</span>
                             </div>
 
                             <!-- Homograph Attack -->
