--- a/webApp/src/jsMain/resources/trust.html
+++ b/webApp/src/jsMain/resources/trust.html
@@ -352,7 +352,7 @@
                                     </div>
                                     <div class="about-info">
                                         <h4 data-i18n="AboutQrShield">About QR-SHIELD</h4>
-                                        <p data-i18n="CoreVersion">Core v2.4.1 • Build 2024.12.19</p>
+                                        <p data-i18n="CoreVersion">Core v2.4.1 • Build 2025.12.29</p>
                                     </div>
                                 </div>
 
@@ -381,7 +381,7 @@
 
                     <!-- Footer -->
                     <footer class="trust-footer">
-                        <p data-i18n="Copyright">© 2024 QR-SHIELD Security Inc. All rights reserved.</p>
+                        <p data-i18n="Copyright">© 2025-2026 QR-SHIELD Security Inc. All rights reserved.</p>
                         <div class="footer-links">
                             <a href="#" data-i18n="Support">Support</a>
                             <a href="#" data-i18n="Terms">Terms</a>
