feat: Introduce granular ML score severity levels and enhance results page placeholder texts with i18n support.

--- a/webApp/src/jsMain/resources/results.html
+++ b/webApp/src/jsMain/resources/results.html
@@ -219,7 +219,7 @@
                             </div>
                             <div class="url-display" id="urlDisplay">
                                 <span class="material-symbols-outlined url-icon">link</span>
-                                <code class="url-text" id="scannedUrl" data-i18n="Loading">Loading...</code>
+                                <code class="url-text" id="scannedUrl" data-i18n="WaitingForScan">Waiting for scan...</code>
                             </div>
                         </div>
                         <div class="analysis-meta">
@@ -256,12 +256,12 @@
                                     <div class="verdict-main">
                                         <span class="material-symbols-outlined icon-filled verdict-shield"
                                             id="verdictIcon">shield_lock</span>
-                                        <h3 class="verdict-title" id="verdictTitle" data-i18n="Analyzing">ANALYZING...
+                                        <h3 class="verdict-title" id="verdictTitle" data-i18n="WaitingForAnalysis">Waiting for analysis...
                                         </h3>
                                     </div>
                                     <p class="verdict-description" id="verdictDescription"
-                                        data-i18n="ProcessingResults">
-                                        Processing scan results...
+                                        data-i18n="ScanURLToSeeResults">
+                                        Scan a URL to see detailed results.
                                     </p>
                                 </div>
                             </div>
