--- a/webApp/src/jsMain/resources/scanner.html
+++ b/webApp/src/jsMain/resources/scanner.html
@@ -371,8 +371,8 @@
     <script src="platform-bridge.js"></script>
     <!-- Kotlin/JS Bundle -->
     <script src="webApp.js"></script>
-    <!-- QR Scanning Library -->
-    <script src="https://cdn.jsdelivr.net/npm/jsqr@1.4.0/dist/jsQR.min.js"></script>
+    <!-- QR Scanning Library (local copy - offline-first) -->
+    <script src="jsQR.min.js"></script>
     <!-- Theme System -->
     <script src="theme.js"></script>
     <!-- Page Transitions -->
