--- a/webApp/src/jsMain/resources/trust.html
+++ b/webApp/src/jsMain/resources/trust.html
@@ -19,15 +19,8 @@
     <link rel="apple-touch-icon" href="assets/icon-256.png" />
     <link rel="icon" type="image/svg+xml" href="assets/icon-256.png" />
 
-    <!-- Fonts -->
-    <link href="https://fonts.googleapis.com" rel="preconnect" />
-    <link crossorigin="" href="https://fonts.gstatic.com" rel="preconnect" />
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;900&display=swap"
-        rel="stylesheet" />
-
-    <!-- Material Symbols -->
-    <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:wght,FILL@100..700,0..1&display=swap"
-        rel="stylesheet" />
+    <!-- Local Fonts (Offline-First) -->
+    <link href="fonts.css" rel="stylesheet" />
 
     <!-- Theme System -->
     <link href="theme.css" rel="stylesheet" />
