feat: implement and display new global keyboard shortcuts and modify existing ones to use simple keys.

--- a/webApp/src/jsMain/resources/onboarding.html
+++ b/webApp/src/jsMain/resources/onboarding.html
@@ -418,6 +418,54 @@
                         </div>
                     </div>
 
+                    <!-- Keyboard Shortcuts Section -->
+                    <div class="settings-card" id="keyboardShortcutsCard">
+                        <div class="settings-header">
+                            <span class="material-symbols-outlined">keyboard</span>
+                            <h4 data-i18n="KeyboardShortcuts">Keyboard Shortcuts</h4>
+                        </div>
+
+                        <p class="settings-info-text" data-i18n="KeyboardShortcutsDesc">
+                            Press these keys when not typing in an input field. Works on Windows, Mac and Linux.
+                        </p>
+
+                        <div class="shortcuts-grid">
+                            <div class="shortcut-row">
+                                <span class="shortcut-action" data-i18n="StartScanner">Start Scanner</span>
+                                <kbd class="shortcut-kbd">S</kbd>
+                            </div>
+                            <div class="shortcut-row">
+                                <span class="shortcut-action" data-i18n="ImportImage">Import Image</span>
+                                <kbd class="shortcut-kbd">I</kbd>
+                            </div>
+                            <div class="shortcut-row">
+                                <span class="shortcut-action" data-i18n="NavigateToDashboard">Dashboard</span>
+                                <kbd class="shortcut-kbd">D</kbd>
+                            </div>
+                            <div class="shortcut-row">
+                                <span class="shortcut-action" data-i18n="NavigateToHistory">Scan History</span>
+                                <kbd class="shortcut-kbd">H</kbd>
+                            </div>
+                            <div class="shortcut-row">
+                                <span class="shortcut-action" data-i18n="NavigateToTrust">Trust Centre</span>
+                                <kbd class="shortcut-kbd">T</kbd>
+                            </div>
+                            <div class="shortcut-row">
+                                <span class="shortcut-action" data-i18n="NavigateToGame">Beat the Bot</span>
+                                <kbd class="shortcut-kbd">G</kbd>
+                            </div>
+                            <div class="shortcut-row">
+                                <span class="shortcut-action" data-i18n="CloseMenuModal">Close Modal</span>
+                                <kbd class="shortcut-kbd">Escape</kbd>
+                            </div>
+                            <div class="shortcut-row">
+                                <span class="shortcut-action" data-i18n="ShowHelp">Show Help</span>
+                                <kbd class="shortcut-kbd">?</kbd>
+                            </div>
+                        </div>
+                    </div>
+
+
                     <!-- Action Footer -->
                     <div class="action-footer">
                         <div class="footer-info">
