--- a/webApp/src/jsMain/resources/results.html
+++ b/webApp/src/jsMain/resources/results.html
@@ -19,6 +19,8 @@
     <link rel="apple-touch-icon" href="assets/icon-256.png" />
     <link rel="icon" type="image/svg+xml" href="assets/icon-256.png" />
 
+    <!-- Preload Critical Fonts (prevents FOUT during navigation) -->
+    <link rel="preload" href="./fonts/material-symbols.woff2" as="font" type="font/woff2" crossorigin>
     <!-- Local Fonts (Offline-First) -->
     <link href="fonts.css" rel="stylesheet" />
 
@@ -212,7 +214,8 @@
                             </div>
                             <div class="url-display" id="urlDisplay">
                                 <span class="material-symbols-outlined url-icon">link</span>
-                                <code class="url-text" id="scannedUrl" data-i18n="WaitingForScan">Waiting for scan...</code>
+                                <code class="url-text" id="scannedUrl"
+                                    data-i18n="WaitingForScan">Waiting for scan...</code>
                             </div>
                         </div>
                         <div class="analysis-meta">
@@ -249,7 +252,8 @@
                                     <div class="verdict-main">
                                         <span class="material-symbols-outlined icon-filled verdict-shield"
                                             id="verdictIcon">shield_lock</span>
-                                        <h3 class="verdict-title" id="verdictTitle" data-i18n="WaitingForAnalysis">Waiting for analysis...
+                                        <h3 class="verdict-title" id="verdictTitle" data-i18n="WaitingForAnalysis">
+                                            Waiting for analysis...
                                         </h3>
                                     </div>
                                     <p class="verdict-description" id="verdictDescription"
