--- a/webApp/src/jsMain/resources/threat.html
+++ b/webApp/src/jsMain/resources/threat.html
@@ -19,6 +19,8 @@
     <link rel="apple-touch-icon" href="assets/icon-256.png" />
     <link rel="icon" type="image/svg+xml" href="assets/icon-256.png" />
 
+    <!-- Preload Critical Fonts (prevents FOUT during navigation) -->
+    <link rel="preload" href="./fonts/material-symbols.woff2" as="font" type="font/woff2" crossorigin>
     <!-- Local Fonts (Offline-First) -->
     <link href="fonts.css" rel="stylesheet" />
 
