fix: update service worker to v2.17.0 for absolute URL caching and remove query strings from CSS links in HTML files.

--- a/webApp/src/jsMain/resources/export.html
+++ b/webApp/src/jsMain/resources/export.html
@@ -28,7 +28,7 @@
     <!-- Theme System -->
     <link href="theme.css" rel="stylesheet" />
     <!-- Export Page Styles -->
-    <link href="export.css?v=2" rel="stylesheet" />
+    <link href="export.css" rel="stylesheet" />
     <!-- Page Transitions -->
     <link href="transitions.css" rel="stylesheet" />
     <!-- Shared UI Components -->
