--- a/webApp/src/jsMain/resources/game.html
+++ b/webApp/src/jsMain/resources/game.html
@@ -28,7 +28,7 @@
     <!-- Theme System -->
     <link href="theme.css" rel="stylesheet" />
     <!-- Game Styles -->
-    <link href="game.css?v=3" rel="stylesheet" />
+    <link href="game.css" rel="stylesheet" />
     <!-- Page Transitions -->
     <link href="transitions.css" rel="stylesheet" />
     <!-- Shared UI Components -->
