refactor: Rebrand project from QR-SHIELD to Mehr Guard across all platforms and documentation.

--- a/webApp/src/jsMain/resources/game.html
+++ b/webApp/src/jsMain/resources/game.html
@@ -292,7 +292,7 @@
                                         <div class="score-header">
                                             <span class="score-name">
                                                 <span class="material-symbols-outlined">smart_toy</span>
-                                                <span data-i18n="QrShieldBot">QR-Shield Bot</span>
+                                                <span data-i18n="MehrGuardBot">Mehr Guard Bot</span>
                                             </span>
                                             <span class="score-value" id="botScore">400 pts</span>
                                         </div>
