--- a/webApp/src/jsMain/resources/trust.html
+++ b/webApp/src/jsMain/resources/trust.html
@@ -347,7 +347,7 @@
                                         <span class="material-symbols-outlined">policy</span>
                                     </div>
                                     <div class="about-info">
-                                        <h4 data-i18n="AboutQrShield">About Mehr Guard</h4>
+                                        <h4 data-i18n="AboutMehrGuard">About Mehr Guard</h4>
                                         <p data-i18n="CoreVersion">Core v2.4.1 • Build 2025.12.29</p>
                                     </div>
                                 </div>
