--- a/webApp/src/jsMain/resources/onboarding.html
+++ b/webApp/src/jsMain/resources/onboarding.html
@@ -432,7 +432,9 @@
                                     <option value="ar">العربية</option>
                                     <option value="de">Deutsch</option>
                                     <option value="es">Español</option>
+                                    <option value="fa">فارسی</option>
                                     <option value="fr">Français</option>
+                                    <option value="he">עברית</option>
                                     <option value="hi">हिन्दी</option>
                                     <option value="id">Indonesia</option>
                                     <option value="it">Italiano</option>
