Fix(WebApp):Languages updated
- Updated Persian, French, Hebrew, Hindi, Indonesian, Italian, Japanese, Korean, Portuguese, Russian, Thai, Turkish, Vietnamese, and Chinese language files with new translations for result screen verdicts and data lifecycle terms.
- Enhanced onboarding HTML to utilize internationalization for data lifecycle table headers and content.
- Modified threat.js to replace hardcoded strings with internationalized keys for various threat levels and descriptions.

--- a/webApp/src/jsMain/resources/onboarding.html
+++ b/webApp/src/jsMain/resources/onboarding.html
@@ -251,35 +251,35 @@
                             <table class="data-table">
                                 <thead>
                                     <tr>
-                                        <th>Data Point</th>
-                                        <th>Processing Env</th>
-                                        <th>External Transmission</th>
+                                        <th data-i18n="DataPoint">Data Point</th>
+                                        <th data-i18n="ProcessingEnv">Processing Env</th>
+                                        <th data-i18n="ExternalTransmission">External Transmission</th>
                                     </tr>
                                 </thead>
                                 <tbody>
                                     <tr>
-                                        <td class="data-point">Raw Image Buffer</td>
+                                        <td class="data-point" data-i18n="RawImageBuffer">Raw Image Buffer</td>
                                         <td class="processing-env">
                                             <span class="env-dot green"></span>
-                                            Local Memory (RAM)
+                                            <span data-i18n="LocalMemoryRam">Local Memory (RAM)</span>
                                         </td>
-                                        <td class="transmission">None</td>
+                                        <td class="transmission" data-i18n="TransmissionNone">None</td>
                                     </tr>
                                     <tr>
-                                        <td class="data-point">Decoded URL/Payload</td>
+                                        <td class="data-point" data-i18n="DecodedUrlPayload">Decoded URL/Payload</td>
                                         <td class="processing-env">
                                             <span class="env-dot blue"></span>
-                                            Local Analysis
+                                            <span data-i18n="LocalAnalysis">Local Analysis</span>
                                         </td>
-                                        <td class="transmission">None</td>
+                                        <td class="transmission" data-i18n="TransmissionNone">None</td>
                                     </tr>
                                     <tr>
-                                        <td class="data-point">Threat Verdict</td>
+                                        <td class="data-point" data-i18n="ThreatVerdictLabel">Threat Verdict</td>
                                         <td class="processing-env">
                                             <span class="env-dot purple"></span>
-                                            Local Database
+                                            <span data-i18n="LocalDatabase">Local Database</span>
                                         </td>
-                                        <td class="transmission">None</td>
+                                        <td class="transmission" data-i18n="TransmissionNone">None</td>
                                     </tr>
                                 </tbody>
                             </table>
