Fix(WebApp):Add new sensitivity modes and update translations for various languages
- Introduced "Low Sensitivity Mode" and "Paranoia Mode" with descriptions in Indonesian, Italian, Japanese, Korean, Portuguese, Russian, Thai, Turkish, Vietnamese, and Chinese.
- Updated the results display logic to reflect new translations for verdicts and descriptions.
- Enhanced signal description translations in the threat analysis section to improve user understanding of security signals.
- Updated trust page to include localized descriptions for privacy guarantees and local architecture.

--- a/webApp/src/jsMain/resources/trust.html
+++ b/webApp/src/jsMain/resources/trust.html
@@ -171,13 +171,13 @@
                                     <span data-i18n="SecureEnvironment">Secure Environment</span>
                                 </div>
                                 <h3 class="hero-title" data-i18n="OfflineGuarantee">Strict Offline Guarantee</h3>
-                                <p class="hero-description">
+                                <p class="hero-description" data-i18n="PrivacyGuaranteeDesc">
                                     Mehr Guard uses local heuristic analysis engines. No image data, URL strings, or
                                     metadata leaves this device during scanning. Your privacy is mathematically
                                     guaranteed.
                                 </p>
                                 <button class="learn-more-btn">
-                                    Learn about our local architecture
+                                    <span data-i18n="LearnLocalArchitecture">Learn about our local architecture</span>
                                     <span class="material-symbols-outlined">arrow_forward</span>
                                 </button>
                             </div>
