Feat(WebApp): Move Red Team panel to scanner page for improved judge UX

--- a/webApp/src/jsMain/resources/scanner.html
+++ b/webApp/src/jsMain/resources/scanner.html
@@ -168,6 +168,28 @@
                     </div>
                 </div>
 
+                <!-- ============================================
+                     RED TEAM SCENARIOS PANEL (Judge Demo Mode)
+                     ============================================ -->
+                <div class="red-team-panel" id="redTeamPanel" style="display: none;">
+                    <div class="red-team-header">
+                        <div class="red-team-title">
+                            <span class="red-team-icon">🕵️</span>
+                            <span data-i18n="RedTeamTestScenarios">Red Team Test Scenarios</span>
+                        </div>
+                        <div class="red-team-meta">
+                            <span class="red-team-count" id="redTeamCount">11</span>
+                            <span class="red-team-attacks" data-i18n="Attacks">attacks</span>
+                        </div>
+                    </div>
+                    <div class="red-team-chips-container">
+                        <div class="red-team-chips" id="redTeamChips">
+                            <!-- Chips populated by JS -->
+                        </div>
+                    </div>
+                    <p class="red-team-hint" data-i18n="RedTeamHint">Tap any scenario to bypass camera and test detection engine directly</p>
+                </div>
+
                 <!-- Main Grid Layout -->
                 <div class="scanner-grid">
 
